--- a/index.css
+++ b/index.css
@@ -172,11 +172,12 @@ text-align: center;
  background-size: 0% 3px;
  background-repeat: no-repeat;
  background-position: left bottom;
- transition: background-size 300ms ease;
+ transition:  300ms ease;
 }
 
 #projects a:hover {
     background-size: 100% 3px;
+    cursor: pointer;
 }
 
 #profile-link {
@@ -215,6 +216,8 @@ text-align: center;
 h5 {
   font-size: 17px;
   color: black;
+  position: relative;
+  top: 5px;
 }
 
 nav a::before {
@@ -237,4 +240,18 @@ footer {
   background-color: lightgray;
   display: flex;
   justify-content: right;
+}
+
+.loguito {
+  position: relative;
+}
+
+.info_icon {
+  margin-left: 10px;
+  margin-bottom: -5px;
+  margin-right: 10px;
+}
+
+.contact_icon {
+  margin-right: 10px;
 }
